FDG-6927 Fixed text alignment

--- a/src/layouts/currency-exchange-rates-converter/currency-exchange-rates-converter.module.scss
+++ b/src/layouts/currency-exchange-rates-converter/currency-exchange-rates-converter.module.scss
@@ -98,20 +98,24 @@
   width: 100%;
   height: 10rem;
   background-color: #f1f1f1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  span {
-    font-size: 1rem;
-    display: table;
-    padding-top: 1.8rem;
-    margin-left: 9.375rem;
-    font-weight: $semi-bold-weight;
-  }
+    span {
+      font-size: 1rem;
+      display: table;
+      padding-top: 1.8rem;
+      margin-left: 9.375rem;
+      font-weight: $semi-bold-weight;
+    }
 
-  p {
-    margin: 12px 9.375rem 0;
-    font-size: 0.875rem;
-  }
-
+    p {
+      margin: 12px 9.375rem 0;
+      font-size: 0.875rem;
+      max-width: 1140px;
+      padding-bottom: 2rem;
+    }
 }
 
 
